etc/tests/fuzz/errors/adt/unknown-constructor-field.nshape
shape adt-unknown-constructor-field {
  family "compiler-errors/adt"
  generator "error"
  features ["error", "adt", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "unknown field 'diameter' for ADT variant 'Shape.Circle'"
  source ny <<'NY'
use std.core

enum Shape {
   Circle(int radius),
   Empty
}

def x = Shape.Circle(diameter: 2)
print(x)
NY
}
